--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
@@ -47,5 +47,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.11"
-  }
+  },
+  "description": "Welcome to the **Mousa E-commerce Store**, an interactive and stylish online shopping platform built with React! This project allows users to explore and purchase a curated selection of items across various categories, including **clothes for men and women, furniture, and electronics**.",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
